[package]
name = "kmeans1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.197"
itertools = "0.12.1"
